apps-manual/helm-obstest/obstest/egress-deploy.yaml
apiVersion: install.tetrate.io/v1alpha1
kind: Gateway
metadata:
  name: egress-gateway
  namespace: egress
spec:
  type: EGRESS
