apps-manual/helm-obstest/obstest/se-httpbingo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbingo-org
  namespace: egress
  annotations:
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/tenant: obstest
    tsb.tetrate.io/workspace: obstest-ws
    tsb.tetrate.io/istioInternalGroup: obstest-ig
spec:
  hosts:
    - httpbingo.org
  exportTo:
    - "." 
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
